# copilot-cli-trace-deck

./: README.md  pyproject.toml
src/copilot_cli_trace_deck/: __init__.py  __main__.py  models.py  server.py
src/copilot_cli_trace_deck/data/: __init__.py  sessions.py
src/copilot_cli_trace_deck/web/: __init__.py  pages.py  server.py
