[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-cli-trace-deck"
version = "0.1.0"
description = "Render GitHub Copilot CLI agent debug logs into a clear, inspectable trace view."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"watchdog>=6,<7",
]

[project.scripts]
copilot-cli-trace-deck = "copilot_cli_trace_deck.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
